Fix to allow buttons to align inline (fixes #8099)

--- a/scss/GridField.scss
+++ b/scss/GridField.scss
@@ -41,8 +41,10 @@ $gf_grid_x:	16px;
 		& > div {
 			margin-bottom: $gf_grid_y*3;
 			&.addNewGridFieldButton{
-				margin-bottom:$gf_grid_y;
-				@include clearfix;
+				margin-bottom: 0;
+				.action {
+					margin-bottom: $gf_grid_y;
+				}
 			}
 		}
 
@@ -61,7 +63,6 @@ $gf_grid_x:	16px;
 	 	}
 
 	 	p button#action_export {
-			margin-top:$gf_grid_y;
 			span.btn-icon-download-csv {
 				height:17px; //exact height of icon
 			}
@@ -77,8 +78,7 @@ $gf_grid_x:	16px;
 				font-size: $gf_grid_y*1.2;
 			}
 
-			.pagination-records-number
-			{
+			.pagination-records-number {
 				font-size: 1.0em;
 				padding: 6px 3px 6px 0;
 				color: $color-text-light;
@@ -106,15 +106,15 @@ $gf_grid_x:	16px;
 			margin-bottom: 6px;
 		}
 		.add-existing-autocompleter {
-			input.relation-search {
-				width: 380px;
+			span {															
+				display: inline-block;
 			}
-			width: 500px;
+			input.relation-search {
+				width: 270px;
+			}
 		}
-		.grid-print-button{
-			display: inline-block;
-		}
-		.grid-csv-button{
+		.grid-csv-button, .grid-print-button {
+			margin-bottom: $gf_grid_y;
 			display: inline-block;
 		}
 	}
